additional tips for html styling

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -12,7 +12,7 @@
     <p>CSS is awesome</p>
     <!-- id is for one specific div; class is for class of divs -->
     <div id="box" class="box2">I am a box</div>
-    <div>I am a box</div>
-    <div class="box2"> this is the class box</div>
+    <div>I <p>I </p>am a box</div>
+    <div class="box2 box3"> <p>this</p> is the class box</div>
 </body>
 </html>
